# s2t.ai

backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/core/: exceptions.py  settings.py  urls.py
backend/data/: doc_1.json  doc_2.json  file_1.json
backend/data/line/: doc_2.json
backend/data/pie_bar/: doc_2.json
backend/registry/: api.py  charts_api.py  documents.py  handlers.py  models.py  schema.py  urls.py
backend/registry/management/commands/: feed_chart_types.py  feed_documents.py  wait_for_db.py
backend/registry/migrations/: 0001_initial.py  0002_chart.py  0003_charttype_alter_chart_chart_type.py  0004_alter_dashboard_name.py  0005_alter_charttype_chart_image.py  0006_alter_chart_chart_type.py  0007_alter_charttype_chart_image.py  0008_chart_chart_config.py  0009_chart_chart_height_chart_chart_width.py
backend/utils/: chart_handlers.py  elasticsearch.py
